--- a/Sriracha.Ioc/packages.config
+++ b/Sriracha.Ioc/packages.config
@@ -3,5 +3,6 @@
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="Common.Logging" version="2.3.1" targetFramework="net45" />
   <package id="Common.Logging.NLog30" version="2.3.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
   <package id="NLog" version="3.0.0.0" targetFramework="net45" />
 </packages>
