--- a/Sriracha.Ioc/packages.config
+++ b/Sriracha.Ioc/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
-  <package id="Common.Logging" version="2.3.1" targetFramework="net45" />
-  <package id="Common.Logging.NLog30" version="2.3.1" targetFramework="net45" />
+  <package id="Common.Logging" version="3.1.0" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.1.0" targetFramework="net45" />
+  <package id="Common.Logging.NLog30" version="3.1.0" targetFramework="net45" />
   <package id="MMDB.Shared" version="2.0.0.20" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="NLog" version="3.0.0.0" targetFramework="net45" />
+  <package id="NLog" version="3.2.0.0" targetFramework="net45" />
 </packages>
