--- a/Sriracha.Ioc/packages.config
+++ b/Sriracha.Ioc/packages.config
@@ -6,6 +6,7 @@
   <package id="Common.Logging.NLog32" version="3.1.0" targetFramework="net45" />
   <package id="MMDB.Shared" version="2.0.0.20" targetFramework="net45" />
   <package id="Nancy" version="1.1" targetFramework="net45" />
+  <package id="Nancy.Authentication.Forms" version="1.1" targetFramework="net45" />
   <package id="Nancy.Bootstrappers.Autofac" version="1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="NLog" version="3.2.0.0" targetFramework="net45" />
